[package]
name = "google_pay_decrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rust_hkdf = { package = "hkdf", version = "0.12.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17.8"
aes-gcm = "0.10" # Or replace with aes = "0.8" for AES-CTR
anyhow = "1.0"
time = "0.3"
openssl = "0.10"
sha2 = "0.10.8"


